cabal-version:       >=1.10
name:                data-graph-test
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             GPL-3
license-file:        LICENSE
author:              Johannes Waldmann
maintainer:          @
-- copyright:
category:            Data
build-type:          Simple
extra-source-files:  CHANGELOG.md

benchmark data-graph-test
  type:             exitcode-stdio-1.0
  main-is:             DGT.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base,containers,GraphSCC,array,gauge
  -- hs-source-dirs:
  default-language:    Haskell2010
